MainPageV2: Fixing post title margins so they don't overlap with timestamp.

--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -164,7 +164,7 @@
         font-size: 20px
         font-weight: normal
         margin: 0px
-          right: 75px
+          right: 95px
           left: 65px
         position: relative
         top: -2px
